@@ -10,8 +10,8 @@ import java.nio.file.Path;
 public class FileServiceImpl implements FileService {
 
    private static final Validator validator = new ValidatorImpl();
-
-    //TODO добавить проверки, валидацию пути и текста в оба метода
+    public static final String DEFAULT_DIRECTORY = "resources";
+    public static final String DEFAULT_FILENAME = "encrypted.txt";
 
     @Override
     public String getStringFromFile(Path path) {
@@ -30,17 +30,25 @@ public class FileServiceImpl implements FileService {
     }
 
     @Override
-    public void writeFile(String pathName, String text) {
-
-
-        if (!validator.isValidString(text)) {
-            throw new IllegalArgumentException(text);
-        }
-
+    public void writeFile(Path path, String text) {
         try {
-            Files.write(Path.of(pathName), text.getBytes());
+            if (Files.exists(path)) {
+                Files.writeString(path, text);
+            }
+
+            if (Files.isDirectory(path)) {
+                Path file = Files.createFile(path.resolve(DEFAULT_FILENAME));
+                Files.writeString(file, text);
+            }
+            if (Files.notExists(path)) {
+                Path file = Files.createFile(Path.of(DEFAULT_DIRECTORY, path.toString()));
+                Files.writeString(file, text);
+            } else {
+                Files.writeString(Path.of(DEFAULT_DIRECTORY, DEFAULT_FILENAME), text);
+            }
+
         } catch (IOException e) {
-            throw new RuntimeException(e +  " - Неудачная попытка записи файла");
+            throw new RuntimeException("Неудачная попытка записи файла");
         }
     }
 }
